Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Index Page</h1>
-        <p>The bowling alley is open </p>
+        <p>The bowling alley is open M-F 2-10pm and Sat/Sun 10am - 1am</p>
     </body>
 </html>
